--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,85 @@
 @tailwind utilities;
 
 #root {
-	height: 100vh;
-	font-family: 'Inter', sans-serif;
-	font-optical-sizing: auto;
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+}
+
+.image-slider {
+  animation: zoom 20s linear infinite;
+}
+
+@keyframes zoom {
+  0% {
+    opacity: 0;
+    transform: scale(1.3);
+  }
+  5% {
+    opacity: 1;
+  }
+  30% {
+    transform: scale(1.1);
+  }
+  50% {
+    opacity: 1;
+  }
+  60% {
+    transform: scale(1.1);
+    opacity: 0;
+  }
+  90% {
+  }
+  100% {
+    transform: scale(1.3);
+  }
+}
+
+.image-title {
+  animation: fadeIn 8s;
+  font-family: "Patua One";
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(50px) scale(0.8);
+  }
+  40% {
+    opacity: 1;
+    transform: translateY(-50px) scale(1);
+  }
+  60% {
+    opacity: 1;
+    transform: translateY(-50px) scale(1);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(50px) scale(0.8);
+  }
+}
+
+.image-content {
+  animation: fadeInSecond 8s;
+}
+@keyframes fadeInSecond {
+  0% {
+    opacity: 0;
+    transform: translateY(0px) scale(0);
+  }
+  10% {
+    opacity: 0;
+    transform: translateY(50px) scale(0.8);
+  }
+  40% {
+    opacity: 1;
+    transform: translateY(-50px) scale(1);
+  }
+  60% {
+    opacity: 1;
+    transform: translateY(-50px) scale(1);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(50px) scale(0.8);
+  }
 }
