--- a/src/index.css
+++ b/src/index.css
@@ -85,3 +85,15 @@
     transform: translateY(50px) scale(0.8);
   }
 }
+
+.subscriber-section {
+  background-image: url("/img/footer/footerbanner.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.footer-section {
+  background-image: url("/img/footer/footerbanner.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
